fix: only show horizontal scrollbar in virtual keyboard when needed

--- a/css/virtual-keyboard.less
+++ b/css/virtual-keyboard.less
@@ -194,7 +194,7 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     /* Keycap with (incl. margin) */
     --max-width: 102px;
